--- a/leia-fun.cabal
+++ b/leia-fun.cabal
@@ -31,6 +31,7 @@ library
       LEIA.Logging
       Santa
       Scratch
+      TryFused
   other-modules:
       Paths_leia_fun
   hs-source-dirs:
@@ -42,6 +43,7 @@ library
     , logging-facade
     , caster
     , reflection
+    , fused-effects
   default-language: Haskell2010
 
 executable leia-fun-exe
